--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.3",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.16.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
   },
